fix logo spacing and remove weird line when flexes to column

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -4,8 +4,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;   
-  top: 0;
-  background-color: white;
+  /* top: 0;  */
   padding: 20px;
   background-color:  rgb(207, 162, 222);   
   border-bottom: solid 4px black;
@@ -16,47 +15,38 @@
 }
 
 .home-link {
-  text-decoration: none;      
+  text-decoration: none;        
 }
 
 .header-logo{
-  margin: 0 50px;  
+  margin: -10px 50px; 
   font-size: 80px;      
-  display: flex;   
-  padding-bottom: 20px; 
-  /* padding-left: 10px;
-  padding-right: 10px;  
-  background-image: url('../../assets/paper.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 15px;  
-  box-shadow: 5px 6px #000634;  
-  margin-bottom: 5px;    */
+  display: flex;    
+  padding-bottom: 40px;
 }
 
 
-.hm{
+.hm{ 
   color: rgb(98, 0, 255); 
   text-shadow: 3px 6px #000634;
 }
 
-.hi {
+.hi { 
   color:rgb(170, 0, 255); 
   text-shadow: 3px 6px #000634;
 }
 
-.header-icon{
+.header-icon{ 
   font-size: 60px;  
-  color: #000634; 
+  color: black; 
 }
 
-.he {
+.he {  
   color:rgb(255, 0, 157);     
   text-shadow: 3px 6px #000634;
 }
 
-.hr {
+.hr {  
   color:rgb(255, 0, 85);    
   text-shadow: 3px 3px white; 
   text-shadow: 3px 6px #000634;
@@ -139,6 +129,12 @@
 @media only screen and (max-width: 992px) {
   .header-container{
     flex-direction: column;
+  }
+
+  .header-logo{
+    margin-top: -45px;
+     padding-top: 10px;
+    padding-bottom: 10px;
   }
   .header-navbar {
     width: 65%;
